<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/container_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/overview_txt_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/overview_txt"
                android:textColor="#1D1D1D"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/button_container_id"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/overview_txt_id"
                android:layout_marginTop="4dp"
                android:background="#FFFFFF"
                android:baselineAligned="false"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:id="@+id/startDate_calender_container_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/start_date_btn_id"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/calender_icon" />

                    <TextView
                        android:id="@+id/show_start_date_id"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:hint="@string/Start_date_txt"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/endDate_calender_container_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <Button
                        android:id="@+id/end_date_btn_id"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/calender_icon" />

                    <TextView
                        android:id="@+id/show_end_date_id"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:hint="@string/end_date_txt"
                        android:textSize="18sp" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/search_section_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/button_container_id"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:elevation="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plugin_name_id"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_text" />

                <Spinner
                    android:id="@+id/spinner_id"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/hint_text">

                </Spinner>

                <Button
                    android:id="@+id/search_btn_id"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/search_icon" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/selected_txt_container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/search_section_id"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:elevation="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selected_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/plugin_text"
                    android:textColor="#242424"
                    android:textSize="18sp"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_text"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/output_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/selected_txt_container"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/activation_rate_layout_id"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/activation_rate_bg_img"
                    android:orientation="vertical">


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deactivation_rate_layout_id"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/deactivation_rate_bg_img"
                    android:orientation="vertical">


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/activated_layout_id"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/activated_bg_img"
                    android:orientation="vertical">


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/deactivated_layout_id"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/deactivated_bg_img"
                    android:orientation="vertical">


                </LinearLayout>


                <include
                    android:id="@+id/some_id_if_needed"
                    layout="@layout/download_graph_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>